Bug 176456 - kopete does not honor resource selection for jabber accounts
Summary: kopete does not honor resource selection for jabber accounts
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: 0.60.81
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 219060 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-11-29 15:58 UTC by Oliver Putz
Modified: 2013-06-04 16:40 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments
patch (1.17 KB, patch)
2011-05-29 11:54 UTC, Anton Revunov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Putz 2008-11-29 15:58:38 UTC
Version:           0.60.81 (using 4.1.80 (KDE 4.1.80 (KDE 4.2 Beta1)), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.26-gentoo-r1

Steps to reproduce:

1) Create two jabber accounts
2) Define different resources for the jabber accounts on both computers (e.g. mobile / desktop)
3) Log into the jabber accounts
4) With one jabber account right click on the other jabber account in your contact list and select the resource that is *not* the one of the local computer (e.g. on the desktop select the mobile resource for the other contact)
5) Try it again and see that nothing has changed (and therefore subsequent messages will always get delivered to the same resource)

In fact, kopete always sticks with the automatic setting (best / highest priority). Kopete from KDE3 actually honors the setting and enables me to send a message to a particular Jabberaccount (specified by Jabberaccount/resource)
Comment 1 Florian Reinhard 2009-10-27 08:57:26 UTC
got the same behaviour on 4.3.2
Comment 2 Lukas 2010-01-10 15:31:38 UTC
I can confirm this with
KDE 4.3.90 (4.4 RC1) on Fedora 12 (installed from kde-redhat repo)

In the XML-messages that can be seen in XML Console no resource is specified in "to", even when answering a message from a specific resource.
Comment 3 Sasha Unspecified 2011-01-20 09:01:02 UTC
I confirm this Kopete 1.0.0 on KDE 4.4.5 on KUbuntu 10.10.
Comment 4 Anton Revunov 2011-05-29 11:54:25 UTC
Created attachment 60430 [details]
patch

It works for me.
Comment 5 Pali Rohár 2012-12-11 01:02:43 UTC
SVN commit 1328051 by pali:

Fix resource selection for Jabber contacts

Patch from Anton Revunov, thanks!



 M  +4 -1      jabbercontact.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1328051
Comment 6 Pali Rohár 2013-06-04 16:40:28 UTC
*** Bug 219060 has been marked as a duplicate of this bug. ***