Fix resource selection for Jabber contacts

Patch from Anton Revunov, thanks!

BUG: 176456

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1328051